package CardFamily;

import Management.NvidiaToolkit;

public abstract class GraphicsCardFamily {
    public abstract NvidiaToolkit createToolkit();
}