@startuml

title __CARDFAMILY's Class Diagram__\n

  namespace CardFamily {
    class CardFamily.FermiFamily {
        + createToolkit()
    }
  }
  

  namespace CardFamily {
    abstract class CardFamily.GraphicsCardFamily {
        {abstract} + createToolkit()
    }
  }
  

  namespace CardFamily {
    class CardFamily.PascalFamily {
        + createToolkit()
    }
  }
  

  namespace CardFamily {
    class CardFamily.TeslaFamily {
        + createToolkit()
    }
  }
  

  CardFamily.FermiFamily -up-|> CardFamily.GraphicsCardFamily
  CardFamily.PascalFamily -up-|> CardFamily.GraphicsCardFamily
  CardFamily.TeslaFamily -up-|> CardFamily.GraphicsCardFamily


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
